socket installed and logic updated

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <title>Chat App</title>
   </head>
   <body>
-    <h1>Chat App-</h1>
+    <h1>Chat App</h1>
+    <!-- // this is the client side version of the librabry -->
+    <!-- with this logic the client side js code will have sccess to sockkets  -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
   </body>
 </html>
