example tutorial for socket connections

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Chat App</h1>
+    <button id="increment">+1</button>
     <!-- // this is the client side version of the librabry -->
     <!-- with this logic the client side js code will have sccess to sockkets  -->
     <script src="/socket.io/socket.io.js"></script>
