--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,35 @@
   </head>
   <body>
     <h1>Chat App</h1>
+
+    <div id="messages"></div>
+
     <form id="message-form">
       <input name="message" placeholder="Write something..." />
       <button>Send</button>
     </form>
+
     <button id="send-location">Send location</button>
     <!-- // this is the client side version of the librabry -->
     <!-- with this logic the client side js code will have sccess to sockkets  -->
+
+    <script id="location-message-template" type="text/html">
+      <div>
+        <p>
+          <a href="{{url}}" target="_blank">My current location</a>
+        </p>
+      </div>
+    </script>
+
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{createdAt}} - {{message}}</p>
+      </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
