--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     <script id="location-message-template" type="text/html">
       <div>
         <p>
-          <a href="{{url}}" target="_blank">My current location</a>
+          {{createdAt}} -
+          <a href="{{url}}" target="_blank"> My current location </a>
         </p>
       </div>
     </script>
