--- a/public/chat.html
+++ b/public/chat.html
@@ -13,7 +13,12 @@
 
         <div class="compose">
           <form id="message-form">
-            <input name="message" placeholder="Write something..." />
+            <input
+              name="message"
+              placeholder="Write something..."
+              required
+              autocomplete="off"
+            />
             <button>Send</button>
           </form>
           <button id="send-location">Send location</button>
@@ -27,7 +32,7 @@
     <script id="message-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some user name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
@@ -37,7 +42,7 @@
     <script id="location-message-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some user name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>
